--- a/test/m5c-recv.html
+++ b/test/m5c-recv.html
@@ -1,147 +1,152 @@
 <!doctype html>
 <html>
 <head>
-  <title>WebSocket Chat Demo</title>
-  <meta charset="utf-8">
-  <!-- <link href="../shared.css" rel="stylesheet"> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/msgpack5/4.2.0/msgpack5.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothie/1.34.0/smoothie.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/smoothie@1.35.0/smoothie.min.js"></script>
-  <!-- <script type="text/javascript" src="./m5c-recv.js"></script> -->
-  <script type="text/javascript">
+<title>M5Stick-C IMU Demo</title>
+<meta charset="utf-8">
+<!-- <link href="../shared.css" rel="stylesheet"> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/msgpack5/4.2.0/msgpack5.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/smoothie@1.35.0/smoothie.min.js"></script>
+<script type="text/javascript">
 
-  "use strict";
-  var connection = null;
-  // var clientID = 0;
-  var msgpack = msgpack5();
-  
-  // document.addEventListener("DOMContentLoaded", function () {
-    function createCharts(num_charts, chartLabels) {
-      var timeseries = [];
-      var charts = [];
-      var chartContainer = document.getElementById("charts");
+"use strict";
+var connection = null;
+// var clientID = 0;
+var msgpack = msgpack5();
+var label_keys = ["ax", "ay", "az", "gx", "gy", "gz"];
 
-      for (var i = 0; i < num_charts; i++) {
-        var width = "100%";
+// document.addEventListener("DOMContentLoaded", function () {
+  function createCharts(num_charts, chartLabels) {
+    var timeseries = [];
+    var charts = [];
+    var chartContainer = document.getElementById("charts");
 
-        var label = document.createElement("span");
-        label.classList.add("canvas-label");
-        label.textContent = chartLabels[i];
-        label.style.width = width;
-        chartContainer.appendChild(label);
+    for (var i = 0; i < num_charts; i++) {
+      // var height = "100";
+      // var width = "400";
+      // var label = document.createElement("span");
+      // label.classList.add("canvas-label");
+      // label.textContent = chartLabels[i];
+      // label.style.width = width;
+      // chartContainer.appendChild(label);
 
-        var canvas = document.createElement("canvas");
-        canvas.id = "channel_" + i;
-        canvas.style.width = width;
-        canvas.height = 20;
-        chartContainer.appendChild(canvas);
+      // var canvas = document.createElement("canvas");
+      // canvas.id = "channel_" + i;
+      // canvas.style.width = width;
+      // canvas.height = 20;
+      // chartContainer.appendChild(canvas);
 
-        var ts = new TimeSeries();
+      var ts = new TimeSeries();
+      var chart = new SmoothieChart({
+        responsive: true,
+        interpolation: 'linear',
+        millisPerLine: 100
+      });
 
-        var chart = new SmoothieChart({
-          responsive: true,
-          interpolation: 'linear',
-          millisPerLine: 100
-        });
+      chart.streamTo(document.getElementById("channel_"+i), 1000);
+      chart.addTimeSeries(ts, {
+          strokeStyle:'rgb(255, 255, 255)',
+          lineWidth: 1
+      });
 
-        chart.streamTo(canvas, 1000);
-        chart.addTimeSeries(ts);
-        // chartLabels.push(chart);
-        chart.addTimeSeries(ts, {
-            strokeStyle:'rgb(255, 255, 255)',
-            lineWidth: 4
-        });
-
-        timeseries.push(ts);
-        charts.push(chart)
-      }
-      return [timeseries, charts];
-      // return timeseries;
-
-    } // end function createCharts
-
-  // }); // end document.addEventListener("DOMContentLoaded", ...)
-
-
-  function start_stream_func() {
-    var serverUrl;
-    var scheme = "ws";
-  
-    // If this is an HTTPS connection, we have to use a secure WebSocket
-    // connection too, so add another "s" to the scheme.
-    if (document.location.protocol === "https:") {
-      scheme += "s";
+      timeseries.push(ts);
+      charts.push(chart)
     }
-  
-    // serverUrl = scheme + "://" + document.location.hostname + ":6502";
-    serverUrl = scheme + "://" + "m5c-imu" + ":42000";
-  
-    connection = new WebSocket(serverUrl);
-    console.log("***CREATED WEBSOCKET");
-  
-    connection.onopen = function(evt) {
-      console.log("***ONOPEN");
-    };
-    console.log("***CREATED ONOPEN");
-  
-    // initialize label_keys and plots (i.e. timeseries)
-    var label_keys = ["ax", "ay", "az", "gx", "gy", "gz"];
-    const _tmp = createCharts(label_keys.length, label_keys);
-    var timeseries = _tmp[0];
-    var charts = _tmp[1];
-    var g_time = 0.0;
-  
-    connection.onmessage = function(evt) {
-      console.log("***ONMESSAGE");
-      console.log(charts.length)
-      // var f = document.getElementById("some_html_identifier").contentDocument;
-  
-      console.log(typeof evt.data);
-      console.log(evt.data);
-  
-      var obj;
-      // process websocket buffer and msgpack object
-      evt.data.arrayBuffer().then(function(data) {
-        // decode MsgPack object from arrayBuffer in to JSON object
-        obj = msgpack.decode(data);
-        console.log(obj);
-  
-        // loop through label_keys and plots
-        // console.log(label_keys)
-        var yoyoyo = new Date().getTime();
-        // console.log(yoyoyo);
-        label_keys.forEach(function(label_key, label_key_ix) {
-          var loc_time = g_time;
-          // console.log(label_key)
-          // console.log(obj[label_key])
-          // console.log(label_key_ix)
-          obj[label_key].forEach(function(val, val_ix) {
-            // update local time and convert micros to millis
-            loc_time += (obj["micros"][val_ix] / 1e3);
-            // console.log(loc_time)
-            // console.log(val)
-            timeseries[label_key_ix].append(Math.round(loc_time) , val);
-          }); // end foreach plot/graph
-  
-          // if last label, then update
-          if(label_key_ix == label_keys.length - 1) {
-            console.log(g_time);
-            // console.log(Math.round(g_time));
-            g_time = loc_time;
-          }
-  
-        }); // end loop through label_keys and plots 
-  
-      }); // end process websocket buffer and msgpack object
-  
-    }; // end connection.onmessage
-    console.log("***CREATED ONMESSAGE");
-  
-  } // end start_stream_func
+    return [timeseries, charts];
+    // return timeseries;
+
+  } // end function createCharts
+
+// }); // end document.addEventListener("DOMContentLoaded", ...)
+
+
+function start_stream_func() {
+  var serverUrl;
+  var scheme = "ws";
+
+  // If this is an HTTPS connection, we have to use a secure WebSocket
+  // connection too, so add another "s" to the scheme.
+  if (document.location.protocol === "https:") {
+    scheme += "s";
+  }
+
+  // serverUrl = scheme + "://" + document.location.hostname + ":6502";
+  serverUrl = scheme + "://" + "m5c-imu" + ":42000";
+
+  connection = new WebSocket(serverUrl);
+  console.log("***CREATED WEBSOCKET");
+
+  connection.onopen = function(evt) {
+    console.log("***ONOPEN");
+  };
+  console.log("***CREATED ONOPEN");
+
+  // initialize label_keys and plots (i.e. timeseries)
+  const _tmp = createCharts(label_keys.length, label_keys);
+  var timeseries = _tmp[0];
+  var charts = _tmp[1];
+  var g_time = new Date().getTime();
+
+  connection.onmessage = function(evt) {
+    console.log("***ONMESSAGE");
+    console.log(charts.length)
+    // var f = document.getElementById("some_html_identifier").contentDocument;
+
+    console.log(typeof evt.data);
+    console.log(evt.data);
+
+    var obj;
+    // process websocket buffer and msgpack object
+    evt.data.arrayBuffer().then(function(data) {
+      // decode MsgPack object from arrayBuffer in to JSON object
+      obj = msgpack.decode(data);
+      console.log(obj);
+
+      // loop through label_keys and plots
+      label_keys.forEach(function(label_key, label_key_ix) {
+        var loc_time = g_time;
+        obj[label_key].forEach(function(val, val_ix) {
+          // update local time and convert micros to millis
+          loc_time += (obj["micros"][val_ix] / 1e3);
+          timeseries[label_key_ix].append(Math.round(loc_time) , val);
+        }); // end foreach plot/graph
+
+        // if last label, then update
+        if(label_key_ix == label_keys.length - 1) {
+          // console.log(g_time);
+          g_time = loc_time;
+        }
+
+      }); // end loop through label_keys and plots 
+
+    }); // end process websocket buffer and msgpack object
+
+  }; // end connection.onmessage
+  console.log("***CREATED ONMESSAGE");
+
+  resizeCanvas();
+} // end start_stream_func
+
+function resizeCanvas() {
+  for (var i = 0; i < label_keys.length; i++) {
+    var canvs = document.getElementById("channel_" + i);
+    var w = window.innerWidth * 0.40;
+    var h = window.innerHeight * 0.20;
+    // if(w < 1000.0 && h < 500.0) {
+    //   canvs.width = w;
+    //   canvs.width = h;
+    //   console.log("YAY!!!!")
+    // }
+    // console.log(w)
+    // console.log(h)
+    canvs.width = w
+    canvs.height = h
+  }
+}
+
 </script>
+
 </head>
-  <body>
-  <!-- <body onload="start_stream_func()"> -->
+<body onload="start_stream_func();">
 
   <p>
     This is a page to receive IMU data from an M5Stick-C device. 
@@ -154,9 +159,22 @@
     This example is offered as-is for demonstration purposes only.
   </p>
 
-  <input type="button" name="start_stream" value="Start Stream" onclick="start_stream_func()"></p>
+  <p>
+  <input type="button" name="start_stream" value="Restart Stream" onclick="start_stream_func()">
+  <input type="button" name="resize" value="Resize Charts" onclick="resizeCanvas()">
+  </p>
 
+  ax <canvas id="channel_0"></canvas>
+  gx <canvas id="channel_3"></canvas>
+  <br>
 
-  <div id="charts"></div>
+  ay <canvas id="channel_1"></canvas>
+  gy <canvas id="channel_4"></canvas>
+  <br>
+
+  az <canvas id="channel_2"></canvas>
+  gz <canvas id="channel_5"></canvas>
+  <br>
+
 </body>
 </html>
