reverting insecure, hacky test

--- a/test/m5c-recv.html
+++ b/test/m5c-recv.html
@@ -96,7 +96,7 @@ function startStream() {
   }
 
   // serverUrl = scheme + "://" + "m5c-imu" + ":42000";
-  serverUrl = "ws" + "://" + "m5c-imu" + ":42000";
+  serverUrl = scheme + "://" + "m5c-imu" + ":42000";
 
   connection = new WebSocket(serverUrl);
   console.log("***CREATED WEBSOCKET");
